deployment/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: gitops-demo
  name: gitops-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitops-demo
  template:
    metadata:
      labels:
        app: gitops-demo
    spec:
      containers:
      - image: gitops/demo:22e42c30
        name: gitops-demo
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
          name: http
