deployment/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitops-demo-ingress
  labels:
    app: gitops-demo
  annotations: 
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: demo.dev.howlinkdev.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitops-demo-svc
                port:
                  number: 80
